Clean up warnings

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -43,9 +43,9 @@
 </div>
 
 <script>
-  var url = '/customer/data_for_datatable';
+    let url = '/customer/data_for_datatable';
 
-  $(document).ready(function () {
+    $(document).ready(function () {
 
     $('#customerTable').DataTable({
       "ajax": url,
