Clean up warnings

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -54,19 +54,19 @@
       "columns": [
         {
           "data": "id",
-          "render": function (data, type, row, meta) {
+          "render": function (data, type, row) {
             return '<a href="/customer/edit/' + row.id + '">' + data + '</a>';
           }
         },
         {
           "data": "firstName",
-          "render": function (data, type, row, meta) {
+          "render": function (data, type, row) {
             return '<a href="/customer/edit/' + row.id + '">' + data + '</a>';
           }
         },
         {
           "data": "lastName",
-          "render": function (data, type, row, meta) {
+          "render": function (data, type, row) {
             return '<a href="/customer/edit/' + row.id + '">' + data + '</a>';
           }
         },
