Add links to main flowable configuration

--- a/src/main/resources/templates/private/index.html
+++ b/src/main/resources/templates/private/index.html
@@ -29,6 +29,8 @@
             <td><a href="/private/user/index" class="btn btn-primary w-100">Managed Users</a></td>
         </tr>
         <tr>
+            <td><a href="/private/flowableui/index" class="btn btn-primary w-100">Process Flow</a></td>
+            <td><a href="/private/flowablecfg/index" class="btn btn-primary w-100">Flow Engine Configuration</a></td>
         </tr>
         </tbody>
 
