--- a/src/main/resources/templates/private/management/properties.html
+++ b/src/main/resources/templates/private/management/properties.html
@@ -12,14 +12,14 @@
 <div class="container" style="margin-top:80px">
 
     <h1 class="pb-2 border-bottom row">
-        <span class="col-12 col-sm-6 pb-4">Flowable Engine Info</span>
+        <span class="col-12 col-sm-6 pb-4">Flowable Properties Info</span>
     </h1>
 
     <div class="mt-5">
         <table id="userTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
-                <th>Flowable Engine Properties</th>
+                <th>Response</th>
             </tr>
             </thead>
             <tr>
@@ -34,7 +34,7 @@
 
 <script>
 
-    const url = '/flowable/proxy/get-engine-properties';
+    const url = '/flowable/proxy/management/properties';
 
     $(document).ready(function (data) {
 
