Add access to Flowable Rest API

--- a/src/main/resources/templates/private/processflow/index.html
+++ b/src/main/resources/templates/private/processflow/index.html
@@ -26,11 +26,13 @@
         <tbody>
         <tr>
             <td><a href="/private/repository/deployment" class="btn btn-primary w-100">List of Deployments</a></td>
-            <td><a href="/private/user/index" class="btn btn-primary w-100">List of Process Definitions</a></td>
+            <td><a href="/private/repository/process-definitions" class="btn btn-primary w-100">List of Process
+                Definitions</a></td>
         </tr>
         <tr>
-            <td><a href="/private/flowableui/index" class="btn btn-primary w-100">List of Process Instances</a></td>
-            <td><a href="/private/management/index" class="btn btn-primary w-100">List of Executions </a></td>
+            <td><a href="/private/runtime/process-instances" class="btn btn-primary w-100">List of Runtime Process
+                Instances</a></td>
+            <td><a href="/private/runtime/executions" class="btn btn-primary w-100">List of Executions </a></td>
         </tr>
         </tbody>
 
