--- a/src/main/resources/templates/private/runtime/executions.html
+++ b/src/main/resources/templates/private/runtime/executions.html
@@ -12,7 +12,7 @@
 <div class="container" style="margin-top:80px">
 
     <h1 class="pb-2 border-bottom row">
-        <span class="col-12 col-sm-6 pb-4">Flowable Engine Info</span>
+        <span class="col-12 col-sm-6 pb-4">Flowable Executions Info</span>
     </h1>
 
     <div class="mt-5">
@@ -34,8 +34,7 @@
 
 <script>
 
-    let url = '/flowable/proxy/management/engine';
-    url = '/flow-api/repository/deployments';
+    const url = '/flow-api/runtime/executions';
 
     $(document).ready(function (data) {
 
