--- a/src/main/resources/templates/private/repository/deployment.html
+++ b/src/main/resources/templates/private/repository/deployment.html
@@ -12,7 +12,7 @@
 <div class="container" style="margin-top:80px">
 
     <h1 class="pb-2 border-bottom row">
-        <span class="col-12 col-sm-6 pb-4">Flowable Repository Deployments Info</span>
+        <span class="col-12 col-sm-6 pb-4">Flowable Repository Deployments</span>
     </h1>
 
     <div class="mt-5">
@@ -34,7 +34,7 @@
 
 <script>
 
-    const url = '/flowable/proxy/repository/deployments';
+    const url = '/flow-api/repository/deployments';
 
     $(document).ready(function (data) {
 
