--- a/src/main/resources/static/identitytms.css
+++ b/src/main/resources/static/identitytms.css
@@ -9,6 +9,11 @@
     border-collapse: collapse;
 }
 
+.ui-dialog {
+
+    width: 900px!important;
+}
+
 .identity-text-center {
 
     text-align:center;
