--- a/src/main/resources/templates/private/repository/deployment.html
+++ b/src/main/resources/templates/private/repository/deployment.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head th:replace="~{fragments/head :: head}" >
+<head th:replace="~{fragments/head :: head}">
     <title></title>=
 </head>
 
 <body>
 
-<header th:replace="~{fragments/header :: header}" > </header>
+<header th:replace="~{fragments/header :: header}"></header>
 
 <div class="container" style="margin-top:80px">
 
@@ -15,18 +15,22 @@
         <span class="col-12 col-sm-6 pb-4">Flowable Repository Deployments</span>
     </h1>
 
+    <div class="alert alert-success" th:if="${message}">
+        <h3 th:text="${message}"></h3>
+    </div>
+
     <div class="mt-5">
         <table id="userTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
-                <th>Response</th>
+                <th>Id</th>
+                <th>parentDeploymentId</th>
+                <th>name</th>
+                <th>deploymentTime</th>
+                <th>url</th>
+                <th>operation</th>
             </tr>
             </thead>
-            <tr>
-                <td  id="response">
-
-                </td>
-            </tr>
         </table>
     </div>
 
@@ -38,23 +42,57 @@
 
     $(document).ready(function (data) {
 
-        $.ajax({
-            url: url,
-            success: function (response) {
-
-                document.getElementById("response").innerText=JSON.stringify(response, undefined, 4);
-
+        $('#userTable').DataTable({
+            "ajax": {
+                "url": url,
+                "type": 'GET',
+                headers: {
+                    "Authorization": "Bearer " + getCookie('JWT'),
+                    'Content-Type': 'application/json'
+                },
+                xhrFields: {
+                    withCredentials: true
+                }
             },
-            error: function (response) {
+            "processing": true,
+            "serverSide": false,
+            "bFilter": true,
+            "columns": [
+                {"data": "id"},
+                {"data": "parentDeploymentId"},
+                {"data": "name"},
+                {"data": "deploymentTime"},
+                {"data": "url"},
+                {"data": "Operation"}
 
-                document.getElementById("response").innerText=JSON.stringify(response);
-
-            }
+            ],
+            "columnDefs": [
+                {
+                    targets: 3,
+                    render: function (data, type, row) {
+                        return formatDateYYYYMMDD_HH_MM(row.deploymentTime)
+                    }
+                },
+                {
+                    targets: 5,
+                    render: function (data, type, row) {
+                        return '<a href="javascript:deleteApp(\'' + row.id + '\')" class="btn btn-primary w-100">Delete</a>'
+                    }
+                }
+            ]
         });
     });
+
+    function deleteApp(id) {
+
+        fetch('/flow-api/repository/deployments/' + id, {
+            method: 'GET'
+        });
+    }
+
 </script>
 
-<footer th:replace="~{fragments/footer :: footer}" > </footer>
+<footer th:replace="~{fragments/footer :: footer}"></footer>
 
 </body>
 </html>
