--- a/src/main/resources/templates/private/repository/process-definitions.html
+++ b/src/main/resources/templates/private/repository/process-definitions.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head th:replace="~{fragments/head :: head}" >
+<head th:replace="~{fragments/head :: head}">
     <title></title>=
 </head>
 
 <body>
 
-<header th:replace="~{fragments/header :: header}" > </header>
+
+<h1 class="pb-2 border-bottom row">
+    <span class="col-12 col-sm-6 pb-4">Flowable Repository Process Definitions Info</span>
+</h1>
+
+
+<header th:replace="~{fragments/header :: header}"></header>
 
 <div class="container" style="margin-top:80px">
 
     <h1 class="pb-2 border-bottom row">
-        <span class="col-12 col-sm-6 pb-4">Flowable Repository Process Definitions Info</span>
+        <span class="col-12 col-sm-6 pb-4">Flowable Repository Deployments</span>
     </h1>
+
+    <div class="alert alert-success" th:if="${message}">
+        <h3 th:text="${message}"></h3>
+    </div>
 
     <div class="mt-5">
         <table id="userTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
-                <th>Response</th>
+                <th>Id</th>
+                <th>url</th>
+                <th>key</th>
+                <th>version</th>
+                <th>name</th>
+                <th>description</th>
+
+                <th>deploymentId</th>
+                <th>deploymentUrl</th>
+                <th>resource</th>
+                <th>diagramResource</th>
+                <th>category</th>
+                <th>graphicalNotationDefined</th>
+                <th>suspended</th>
+                <th>startFormDefined</th>
+
             </tr>
             </thead>
-            <tr>
-                <td  id="response">
-
-                </td>
-            </tr>
         </table>
     </div>
 
 </div>
+
+<div id="dialogWorkflowImage" title="Workflow" >
+    <img id="imageContainer" src=""  alt=""/>
+</div>
+
 
 <script>
 
@@ -38,23 +63,65 @@
 
     $(document).ready(function (data) {
 
-        $.ajax({
-            url: url,
-            success: function (response) {
-
-                document.getElementById("response").innerText=JSON.stringify(response, undefined, 4);
-
+        $('#userTable').DataTable({
+            "ajax": {
+                "url": url,
+                "type": 'GET',
+                headers: {
+                    "Authorization": "Bearer " + getCookie('JWT'),
+                    'Content-Type': 'application/json'
+                },
+                xhrFields: {
+                    withCredentials: true
+                }
             },
-            error: function (response) {
+            "processing": true,
+            "serverSide": false,
+            "bFilter": true,
+            "columns": [
+                {"data": "id"},
+                {"data": "url"},
+                {"data": "key"},
+                {"data": "version"},
+                {"data": "name"},
+                {"data": "description"},
+                {"data": "deploymentId"},
+                {"data": "deploymentUrl"},
+                {"data": "resource"},
+                {"data": "diagramResource"},
+                {"data": "category"},
+                {"data": "graphicalNotationDefined"},
+                {"data": "suspended"},
+                {"data": "startFormDefined"}
 
-                document.getElementById("response").innerText=JSON.stringify(response);
-
-            }
+            ],
+            "columnDefs": [
+                {
+                    targets: 9,
+                    render: function (data, type, row) {
+                        return '<a href="javascript:getImage(\'' + row.id + '\')" class="btn btn-primary w-100">Image</a>'
+                    }
+                }
+            ]
         });
     });
+
+    function getImage(id) {
+
+        const imageElement = document.getElementById('imageContainer')
+        imageElement.src = '/flow-api/repository/process-definitions/' + id + '/image';
+
+        $( function() {
+
+            $( "#dialogWorkflowImage" ).dialog();
+
+        });
+
+    }
+
 </script>
 
-<footer th:replace="~{fragments/footer :: footer}" > </footer>
+<footer th:replace="~{fragments/footer :: footer}"></footer>
 
 </body>
 </html>
