Format graphics and add scrolling support

--- a/src/main/resources/static/identitytms.css
+++ b/src/main/resources/static/identitytms.css
@@ -1,6 +1,6 @@
 #table-index-page, th, td {
 
-    background-color : #0d6efd;
+    background-color: #0d6efd;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -9,14 +9,20 @@
     border-collapse: collapse;
 }
 
-.ui-dialog {
+#imageContainer {
+    overflow-x: hidden;
+    overflow-y: visible;
+    width: auto !important;
+    height: auto !important;
+}
 
-    width: 900px!important;
+.ui-dialog {
+    width: 900px !important
 }
 
 .identity-text-center {
 
-    text-align:center;
+    text-align: center;
 
 }
 
