Reload Deployment page after a delete

--- a/src/main/resources/templates/private/repository/deployment.html
+++ b/src/main/resources/templates/private/repository/deployment.html
@@ -85,8 +85,12 @@
 
     function deleteApp(id) {
 
-        fetch('/flow-api/repository/deployments/' + id, {
-            method: 'GET'
+        $.ajax({
+            url: '/flow-api/repository/deployments/' + id,
+            method: 'GET',
+            success: function(data) {
+                location.reload()
+            }
         });
     }
 
