--- a/src/main/resources/templates/private/runtime/process-instances.html
+++ b/src/main/resources/templates/private/runtime/process-instances.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head th:replace="~{fragments/head :: head}" >
+<head th:replace="~{fragments/head :: head}">
     <title></title>=
 </head>
 
 <body>
 
-<header th:replace="~{fragments/header :: header}" > </header>
+<header th:replace="~{fragments/header :: header}"></header>
 
 <div class="container" style="margin-top:80px">
 
@@ -15,18 +15,25 @@
         <span class="col-12 col-sm-6 pb-4">Flowable Runtimes Instances Info</span>
     </h1>
 
+    <div class="alert alert-success" th:if="${message}">
+        <h3 th:text="${message}"></h3>
+    </div>
+
     <div class="mt-5">
         <table id="userTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
-                <th>Response</th>
+                <th>Id</th>
+                <th>name</th>
+                <th>businessKey</th>
+                <th>processDefinitionId</th>
+                <th>processDefinitionName</th>
+                <th>activityId</th>
+                <th>startTime</th>
+                <th>variables</th>
+
             </tr>
             </thead>
-            <tr>
-                <td  id="response">
-
-                </td>
-            </tr>
         </table>
     </div>
 
@@ -38,20 +45,59 @@
 
     $(document).ready(function (data) {
 
-        $.ajax({
-            url: url,
-            success: function (response) {
-
-                document.getElementById("response").innerText=JSON.stringify(response, undefined, 4);
-
+        $('#userTable').DataTable({
+            "ajax": {
+                "url": url,
+                "type": 'GET',
+                headers: {
+                    "Authorization": "Bearer " + getCookie('JWT'),
+                    'Content-Type': 'application/json'
+                },
+                xhrFields: {
+                    withCredentials: true
+                }
             },
-            error: function (response) {
-
-                document.getElementById("response").innerText=JSON.stringify(response);
-
-            }
+            "processing": true,
+            "serverSide": false,
+            "bFilter": true,
+            "columns": [
+                {"data": "id"},
+                {"data": "name"},
+                {"data": "businessKey"},
+                {"data": "processDefinitionId"},
+                {"data": "processDefinitionName"},
+                {"data": "activityId"},
+                {"data": "startTime"},
+                {"data": "variables"}
+            ],
+            "columnDefs": [
+                {
+                    targets: 6,
+                    render: function (data, type, row) {
+                        return formatDateYYYYMMDD_HH_MM_SS(row.startTime)
+                    }
+                },
+                // {
+                //     targets: 4,
+                //     render: function (data, type, row) {
+                //         return '<a href="javascript:deleteApp(\'' + row.id + '\')" class="btn btn-primary w-100">Delete</a>'
+                //     }
+                // }
+            ]
         });
     });
+
+    function deleteApp(id) {
+
+        $.ajax({
+            url: '/flow-api/runtime/process-instances/' + id,
+            method: 'GET',
+            success: function (data) {
+                location.reload()
+            }
+        });
+    }
+
 </script>
 
 <footer th:replace="~{fragments/footer :: footer}" > </footer>
