Developed controller to submit Biometric Collection Enrolment

--- a/src/main/resources/templates/private/index.html
+++ b/src/main/resources/templates/private/index.html
@@ -32,6 +32,9 @@
             <td><a href="/private/processflow/index" class="btn btn-primary w-100">Process Flow</a></td>
             <td><a href="/private/management/index" class="btn btn-primary w-100">Flow Engine Configuration</a></td>
         </tr>
+        <tr>
+            <td><a href="/private/submit-enrolment/" class="btn btn-primary w-100">Thymeleaf not working</a></td>
+        </tr>
         </tbody>
 
     </table>
