Add developer's corner and submit biometric enrolment forms

--- a/src/main/resources/templates/private/developer/index.html
+++ b/src/main/resources/templates/private/developer/index.html
@@ -12,7 +12,7 @@
 <div class="container" style="margin-top:80px">
 
     <div class="identity-text-center">
-        <h1>Welcome to MGIS Inc.</h1>
+        <h1>Developer's Corner</h1>
     </div>
 
     <table id="table-index-page" class="tg">
@@ -25,15 +25,12 @@
 
         <tbody>
         <tr>
-            <td><a href="/private/monitoring/index" class="btn btn-primary w-100">Monitoring</a></td>
-            <td><a href="/private/user/index" class="btn btn-primary w-100">Managed Users</a></td>
+            <td><a href="/private/developer/submit-enrolment" class="btn btn-primary w-100">Submit Biometric Collection Transaction</a></td>
+            <td><a href="/private/...ex" class="btn btn-primary w-100">Under Construction ...</a></td>
         </tr>
         <tr>
-            <td><a href="/private/processflow/index" class="btn btn-primary w-100">Process Flow</a></td>
-            <td><a href="/private/management/index" class="btn btn-primary w-100">Flow Engine Configuration</a></td>
-        </tr>
-        <tr>
-            <td><a href="/private/developer/index" class="btn btn-primary w-100">Developer's Corner</a></td>
+            <td><a href="/private/...ex" class="btn btn-primary w-100">Under Construction ...</a></td>
+            <td><a href="/private/...ex" class="btn btn-primary w-100">Under Construction ...</a></td>
         </tr>
         </tbody>
 
