--- a/src/main/resources/templates/private/developer/submit-enrolment.html
+++ b/src/main/resources/templates/private/developer/submit-enrolment.html
@@ -3,41 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-      name="viewport">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <title>Thymeleaf Form handling Demo</title>
   <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
         rel="stylesheet">
 </head>
 <body class="container">
-<h1 class="py-5">Post a Biometric Collection Test Transaction</h1>
-<form class="col card p-3 mb-5" method="post" th:action="@{/private/developer/submit-enrolment}"
-      th:object="${userInfo}">
-  <div class="form-group">
-    <label for="biometricId">Biometric Id</label>
-    <input class="form-control" id="biometricId" placeholder="Enter Biometric ID" required
-           th:field="*{biometricId}"
-           type="text"/>
-  </div>
-  <div class="form-group">
-    <label for="enrolmentBse64">EnrolmentBase64 Transaction</label>
-    <input class="form-control" id="enrolmentBse64" placeholder="Enter Enrolment Base64" required
-           th:field="*{enrolmentBase64}"
-           type="text"/>
-  </div>
-  <input class="btn btn-primary w-100" type="submit" value="Submit Enrolment">
-</form>
 
-<div th:if="${userInfo.message != ''}">
-  <h3 class="py-4">Response</h3>
-  [[${userInfo.message}]]
+<header th:replace="~{fragments/header :: header}"></header>
+
+<div class="container" style="margin-top:80px">
+
+  <div class="identity-text-center">
+    <h1>Post a Biometric Collection Test Transaction</h1>
+  </div>
+
+  <form class="col card p-3 mb-5" method="post" th:action="@{/private/developer/submit-enrolment}"
+      th:object="${userInfo}">
+    <div class="form-group">
+      <label for="biometricId">Biometric Id</label>
+      <input class="form-control" id="biometricId" placeholder="Enter Biometric ID" required
+             th:field="*{biometricId}"
+             type="text"/>
+    </div>
+    <div class="form-group">
+      <label for="enrolmentBse64">EnrolmentBase64 Transaction</label>
+      <input class="form-control" id="enrolmentBse64" placeholder="Enter Enrolment Base64" required
+             th:field="*{enrolmentBase64}"
+             type="text"/>
+    </div>
+    <input class="btn btn-primary w-100" type="submit" value="Submit Enrolment">
+
+  </form>
+
+  <div th:if="${userInfo.message != ''}">
+    <h3 class="py-4">Response</h3>
+    [[${userInfo.message}]]
+  </div>
+
 </div>
 
-<script>
-
-</script>
-
+<footer th:replace="~{fragments/footer :: footer}"></footer>
 
 </body>
 </html>
