--- a/src/main/resources/templates/private/developer/index.html
+++ b/src/main/resources/templates/private/developer/index.html
@@ -25,7 +25,8 @@
 
         <tbody>
         <tr>
-            <td><a href="/private/developer/submit-enrolment" class="btn btn-primary w-100">Submit Biometric Collection Transaction</a></td>
+            <td><a href="/private/developer/submit-enrolment" class="btn btn-primary w-100">Submit Biometric Collection
+                Transaction</a></td>
             <td><a href="/private/...ex" class="btn btn-primary w-100">Under Construction ...</a></td>
         </tr>
         <tr>
