Implement getDetail Process Instance Variable

--- a/src/main/resources/templates/private/runtime/process-instances.html
+++ b/src/main/resources/templates/private/runtime/process-instances.html
@@ -82,7 +82,7 @@
                 {
                     targets: 8,
                     render: function (data, type, row) {
-                        return '<a href="javascript:deleteApp(\'' + row.id + '\')" ' +
+                        return '<a href="javascript:detailApp(\'' + row.id + '\')" ' +
                             'class="btn btn-primary w-100 tms-btn-detail">Detail</a>' +
                             '<a href="javascript:detailApp(\'' + row.id + '\')" ' +
                             'class="btn btn-primary w-100 tms-btn-delete">Delete</a>'
